# yb2503

weather_info_yb2503/: CHANGELOG.md  CONTRIBUTING.md  pyproject.toml
weather_info_yb2503/docs/: Makefile  conf.py  example.ipynb  make.bat
weather_info_yb2503/src/: MY_ENV_VAR.env
weather_info_yb2503/tests/: test_weather_info_yb2503.py
weatherinfo/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
weatherinfo/docs/: Makefile  conf.py  example.ipynb  make.bat
weatherinfo/src/weatherinfo/: __init__.py
weatherinfo/tests/: test_weatherinfo.py
