[tool.poetry]
name = "weatherinfo"
version = "0.0.1"
description = "The package is created to provide weather information based on zipcodes"
authors = ["Yunxin Bo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
